02-post-eks-setup.v1/ingress-master.yaml
# https://tech.aabouzaid.com/2022/08/2-ways-to-route-ingress-traffic-across-namespaces.html
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${PREFIX}${DOMAIN}-master
  namespace: ${NAME_SPACE}
  annotations:
    # nginx.org/mergeable-ingress-type: "master"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    # external-dns.alpha.kubernetes.io/hostname: "${NAME_SPACE}-${APP_NAME}-api-rust.${DOMAIN_NAME}"
    nginx.ingress.kubernetes.io/use-proxy-protocol: "true"
    # nginx.ingress.kubernetes.io/proxy-real-ip-cidr: "0.0.0.0/0"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      real_ip_header proxy_protocol;
      real_ip_recursive on;
    # service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
    # service.beta.kubernetes.io/do-loadbalancer-name: "${NAME_SPACE}-${APP_NAME}.${DOMAIN_NAME}"
    # service.beta.kubernetes.io/do-loadbalancer-protocol: https
    # service.beta.kubernetes.io/do-loadbalancer-tls-passthrough: "false"
    # service.beta.kubernetes.io/do-loadbalancer-certificate-id: ${CERTIFICATE_ID}
    # service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
spec:
  ingressClassName: "nginx-${NAME_SPACE}"
  # tls:
  # - hosts:
  #   - ${NAME_SPACE}-${APP_NAME}-api-rust.${DOMAIN_NAME}
  #   secretName: ${NAME_SPACE}-${APP_NAME}-tls
  rules:
  - host: ${NAME_SPACE}-${APP_NAME}-api-rust.${DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ${NAME_SPACE}-${APP_NAME}-api-rust
            port:
              number: 8080
